--- a/webapp/src/ionicapp/www/templates/device.html
+++ b/webapp/src/ionicapp/www/templates/device.html
@@ -104,7 +104,7 @@
     </div>
     <div class="list card d3container" id="device-card219">
       <div class="hierarchychart" width="1000" height="450">
-        <svg id="{{data.devicename}}" width="1000" height="450">
+        <svg id="{{data.devicename_ex}}" width="1000" height="450">
         </svg>
       </div>
     </div>
