--- a/webapp/src/ionicapp/www/templates/addOrganizationUser.html
+++ b/webapp/src/ionicapp/www/templates/addOrganizationUser.html
@@ -1,9 +1,6 @@
-<ion-view title="Add Organization User" hide-back-button="true" nav-transition="none" id="page67" class="page_width">
+<ion-view title="Add Organization User" hide-back-button="true" nav-transition="none" id="page67" class="page_width" ng-click="submitRefresh()">
   <ion-nav-buttons side="left" class="has-header">
     <button class="button button-icon icon ion-android-close" ng-click="exitPage()"></button>
-  </ion-nav-buttons>
-  <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-positive icon ion-refresh" ng-click="submitRefresh()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 20px;"></div>
