--- a/webapp/src/ionicapp/www/templates/updateOrganizationGroupUsers.html
+++ b/webapp/src/ionicapp/www/templates/updateOrganizationGroupUsers.html
@@ -9,8 +9,9 @@
       <div id="updateOrganizationGroupUsers-markdown503" class="show-list-numbers-and-dots">
         <p style="color:#3C5A99;font-size:18px;">{{ data.groupname }}</p>
       </div>
+      <div class="spacer" style="width: 500px; height: 50px;"></div>
       <div id="updateOrganizationGroupUsers-markdown501" class="show-list-numbers-and-dots">
-        <p style="color:#AAAAAA;font-size:12px;">Add or remove users in the organization group.</p>
+        <p style="color:#AAAAAA;font-size:12px;">Update users in the organization group. Unchecked users will be removed from the group.</p>
       </div>
       <ion-checkbox id="updateOrganizationGroupUsers-checkbox57" ng-repeat="member in members" ng-model="member.enabled">{{ member.membername }}</ion-checkbox>
       <button id="updateOrganizationGroupUsers-button216" ng-click="updateGroupMembers()" ng-show="members.length > 0" class="button button-positive button-block">Update</button>
@@ -20,6 +21,9 @@
     </form>
     <form id="updateOrganizationGroupUsers-form246" class="list page_width_small">
       <div class="spacer" style="width: 500px; height: 50px;"></div>
+      <div id="updateOrganizationGroupUsers-markdown506" class="show-list-numbers-and-dots">
+        <p style="color:#AAAAAA;font-size:12px;">Add a user to the group. Only ungrouped users will appear in the list.</p>
+      </div>
       <label class="item item-select" id="updateOrganizationGroupUsers-select113">
         <span class="input-label">Select</span>
         <select ng-options="ungroup.id as ungroup.membername for ungroup in ungrouped" ng-model="memberSelected" ng-change="changeMember(memberSelected)"></select>
