Cleanup and country detection

--- a/webapp/src/ionicapp/www/templates/gatewayLocation.html
+++ b/webapp/src/ionicapp/www/templates/gatewayLocation.html
@@ -1,20 +1,20 @@
-<ion-view title="Device Location" hide-back-button="true" nav-transition="none" id="page56" style="background-color:#FFFFFF;" class="page_width">
+<ion-view title="Gateway Location" hide-back-button="true" nav-transition="none" id="page56" style="background-color:#FFFFFF;" class="page_width">
   <ion-nav-buttons side="left" class="has-header">
     <button class="button button-icon icon ion-android-close" ng-click="viewDevice()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right" class="has-header">
     <button class="button button-positive icon ion-refresh" ng-click="getDeviceLocation(data.devicename)"></button>
   </ion-nav-buttons>
-  <ion-content padding="true" class="has-header" has-bouncing=â€œfalseâ€>
+  <ion-content padding="true" class="has-header" has-bouncing=“false”>
     <div class="spacer" style="height: 12px;"></div>
-    <div id="deviceLocation-markdown314" style="text-align:center;" class="show-list-numbers-and-dots">
+    <div id="gatewayLocation-markdown314" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
     <div class="spacer" style="height: 12px;"></div>
-    <form id="deviceLocation-form220" class="list">
-      <label class="item item-select" id="deviceLocation-select106">
+    <form id="gatewayLocation-form220" class="list">
+      <label class="item item-select" id="gatewayLocation-select106">
         <span class="input-label">Device</span>
         <select ng-options="device.devicename as device.devicename for device in devices" ng-model="data.devicename" ng-change="changeDevice(data.devicename)"></select>
       </label>
@@ -29,12 +29,12 @@
       </ui-gmap-markers>
 
     </ui-gmap-google-map>
-    <div id="deviceLocation-markdown360" ng-show="data.devicename != &quot;All devices&quot;" style="text-align:center;" class="show-list-numbers-and-dots">
+    <div id="gatewayLocation-markdown360" ng-show="data.devicename != &quot;All devices&quot;" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">{{ data.location != "UNKNOWN" &amp;&amp; data.location != "" ? "(Latitude: " + data.location.latitude + " ," + "Longitude: " + data.location.longitude + ")" : "" }}</p>
     </div>
-    <form id="deviceLocation-form228" class="list" ng-show="data.devicename != &quot;All devices&quot;">
-      <button id="deviceLocation-button152" ng-click="setDeviceLocation(data.devicename)" class="button button-positive button-block">Set device location</button>
-      <button id="deviceLocation-button155" ng-click="deleteDeviceLocation(data.devicename)" class="button button-positive button-block button-outline">Delete device location</button>
+    <form id="gatewayLocation-form228" class="list" ng-show="data.devicename != &quot;All devices&quot;">
+      <button id="gatewayLocation-button152" ng-click="setDeviceLocation(data.devicename)" class="button button-positive button-block">Set</button>
+      <button id="gatewayLocation-button155" ng-click="deleteDeviceLocation(data.devicename)" class="button button-positive button-block button-outline">Delete</button>
     </form>
     <div class="spacer" style="width: 300px; height: 50px;"></div>
   </ion-content>
